# csv-merge

./: .gitignore  Cargo.toml  LICENSE  README.md  data.csv
src/: main.rs  remove.md
