[package]
name = "csv-merge"
version = "0.1.0"
authors = ["Richard O'Dwyer <richard@richard.do>"]
edition = "2018"

[dependencies]
csv = "1"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
